# ask-bridge

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.en.md  README.md  ask.sh.bak  install.ps1  install.sh  latest_msg.html  mcp_servers.json  package.json
.agents/skills/bump-and-release/: SKILL.md
.github/workflows/: npm-publish.yml  pages.yml  release.yml
docs/: quick-start.md
public/: i18n.js  index.html  styles.css
scripts/: ask.sh
skills/ask-bridge/: SKILL.md
skills/ask-bridge/agents/: openai.yaml
src/: main.rs  update.rs
tasks/: lessons.md  todo.md
