[package]
name = "ask-bridge"
version = "0.2.9"
edition = "2024"

[[bin]]
name = "ask-bridge"
path = "src/main.rs"

[[bin]]
name = "ask-bridge-update"
path = "src/update.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
home = "0.5"
mcp-cli = { git = "https://github.com/doggy8088/mcp-cli" }
gag = "1.0"
base64 = "0.21"
tempfile = "3"
